# kenbot

./: .env.example  .gitignore  README.md  WINDOWS_DEPLOYMENT.md  desktop.sh  pyproject.toml  redeploy-local.sh
config/: draft_system_prompt.md  final_details_system_prompt.md  motley_rules_uk.md  research_system_prompt.md  style_notes.md
src/kenhallbot/: __init__.py  cli.py  config.py  finance.py  gui.py  io_utils.py  llm.py  models.py  pipeline.py  prompts.py
