[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kenhallbot"
version = "0.1.0"
description = "Lean stock-mover research and drafting pipeline for Motley Fool style workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "flask>=3.0.0",
  "httpx>=0.27.0",
  "openai>=1.70.0",
]

[project.scripts]
kenhallbot = "kenhallbot.cli:main"
kenhallbot-gui = "kenhallbot.gui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
